<resources>
    <string name="app_name">TiketSayaM_Haris_A</string>
    <string name="slogan">Wisata Jadi Lebih Asyik</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email Address</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Your Passion</string>
</resources>
